--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,13 @@
 {
-    "env": {
-        "node": true, 
-        "browser": true, 
-        "es6": true 
-    },
-    "parser": "babel-eslint", 
-    "extends": "airbnb"
+    "parser": "babel-eslint",
+    "extends": "airbnb",
+    "plugins": [
+        "react",
+        "jsx-ally",
+        "import"
+    ],
+    "rules": {
+        "react/jsx-filename-extension": 0,
+        "no-use-before-define": 0
+    }
 }
